# jupdeck

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  ROADMAP.md  custom_bullets.pptx  pyproject.toml  readme.md  setup_precommit.sh
.github/workflows/: test.yml
docs/: parsedcell_walkthrough.ipynb  parser_behavior.ipynb  renderer_behavior.ipynb
examples/: summarize_example.py
examples/data/: image_data.txt  jupdeck_overview.ipynb  rich_demo_notebook_realtext.ipynb
jupdeck/: changelog.md  cli.py
jupdeck/core/: parser.py  renderer.py
notebook_summarizer/: cli.py
notebook_summarizer/core/: exporter.py  mlflow_logger.py  models.py  parser.py  renderer.py  summarizer.py
notebook_summarizer/ui/: __init__.py  databricks_ui.py
notebook_summarizer/utils/: file_utils.py
notebooks/: demo_notebook.ipynb  rich_demo_notebook_realtext.ipynb
scripts/: build_report.py  test_bullets.py
tests/: test_cli.py  test_exporter.py  test_models.py  test_parser.py  test_pipeline.py  test_renderer.py  test_summarizer.py
